@startuml

title "As a User, I want to get the list of official publication types" CD

skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam backgroundColor CornSilk
skinparam classBackgroundColor WhiteSmoke
skinparam classAttributeIconSize 0

class UIPublicationTypeList {
}

package "controller" {
    class GetPublicationTypeListController {
        + getListOfPublicationTypes() : Iterable<PublicationType>
    }
}


package "domain" {
    package "PUBLICATIONTYPE" #b0c4d4 {
        class PublicationType <<Root>> <<Entity>> {
        }
    }

    package "repository" {
        interface IPublicationTypeRepo <<Interface>> {
        }
    }
}

package "ddd" {
    interface IRepository <ID, T> <<Interface>> {
        findAll() : Iterable<T>+
    }
}


UIPublicationTypeList "1" ..> "1" GetPublicationTypeListController : invokes

GetPublicationTypeListController "1" --> "1" IPublicationTypeRepo : calls

IPublicationTypeRepo --|> IRepository
IPublicationTypeRepo "1" --> "*" PublicationType : persists
@enduml
